--- a/public/index.html
+++ b/public/index.html
@@ -6,24 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="static/styles/styles.css">
     <script src="https://kit.fontawesome.com/bf7cc2096e.js" crossorigin="anonymous"></script>
+    <script src="static/js/cards.js" defer></script>
     <title>Dashboard</title>
   </head>
   <body>
-    <header>
-        <img src="static/images/small-logo.png">
-        <h2>BrainySwipe</h2>
-        <button>logout</button>
+    <header class="medium flex flex-wrap-none flex-align-center">
+        <div>
+            <img src="static/images/small-logo.png">
+        </div>
+        <div>
+            <h2>BrainySwipe</h2>
+        </div>
+        <div>
+            <nav class="flex flex-wrap-none flex-justify-center flex-align-center medium-gap">
+                <button class="button medium">chat</button>
+                <button class="button medium">help</button>
+                <button class="button big">logout</button>
+            </nav>
+        </div>
     </header>
-    <section id=content>
+    <section id="content" class="medium flex flex-wrap flex-justify-center flex-align-center big-gap">
         <div id="cards">
         </div>
-        <button><i class="fa-solid fa-arrow-left fa-beat fa-xl"></i></button>
-        <button><i class="fa-solid fa-arrow-right fa-beat fa-xl"></i></button>
+        <button onclick="nextCard('left')" class="button swipe-button"><i class="fa-solid fa-arrow-left fa-beat fa-xl"></i></button>
+        <button onclick="nextCard('right')" class="button swipe-button"><i class="fa-solid fa-arrow-right fa-beat fa-xl"></i></button>
     </section>
-    <nav>
-        <a>chat</a>
-        <a>help</a>
-    </nav>
     <footer></footer>
   </body>
 </html>
