--- a/public/logout.html
+++ b/public/logout.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="static/styles/styles.css">
-    <script src="./static/js/login.js"></script>
-    <title>Dashboard</title>
+    <title>Logout</title>
   </head>
   <body>
     <header class="medium flex flex-wrap-none flex-align-center">
