--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
         </div>
         <div>
             <nav class="flex flex-wrap-none flex-justify-center flex-align-center medium-gap">
-                <button class="button medium">chat</button>
+                <button class="button medium" onclick="window.location.href = '/chat.html'">chat</button>
                 <button class="button medium">help</button>
-                <button class="button big">logout</button>
+                <button class="button big" onclick="window.location.href = '/logout.html'">logout</button>
             </nav>
         </div>
     </header>
