--- a/public/profile.html
+++ b/public/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="static/styles/styles.css">
-    <title>Login</title>
+    <title>Profile</title>
   </head>
   <body>
     <header class="medium flex flex-wrap-none flex-align-center">
@@ -19,7 +19,19 @@
         </div>
     </header>
     <section id="content" class="medium flex flex-wrap flex-justify-center flex-align-center big-gap">
-        <form method="POST" action="/login" class="flex flex-justify-center flex-align-center flex-wrap medium-gap">
+        <form method="POST" action="/register" class="flex flex-justify-center flex-align-center flex-wrap medium-gap">
+            <div class="input-container medium">
+                <input id ="firstName" name="firstName" type="text" placeholder=" " class="medium">
+                <div class="label-container">
+                    <label for="firstName" class="placeholder">First name</label>
+                </div>
+            </div>
+            <div class="input-container medium">
+                <input id ="lastName" name="lastName" type="text" placeholder=" " class="medium">
+                <div class="label-container">
+                    <label for="lastName" class="placeholder">Last name</label>
+                </div>
+            </div>
             <div class="input-container medium">
                 <input id ="username" name="username" type="text" placeholder=" " class="medium">
                 <div class="label-container">
@@ -32,8 +44,13 @@
                     <label for="password" class="placeholder">Password</label>
                 </div>
             </div>
-            <a href="/register.html">Don't have an account yet? Register here now</a>
-            <input type="Submit" value="login" class="button big">
+            <div class="input-container medium">
+                <input id ="fpf" name="fpf" type="text" placeholder=" " class="medium">
+                <div class="label-container">
+                    <label for="fpf" class="placeholder">Favourite physics field</label>
+                </div>
+            </div>
+            <input type="Submit" value="Update profile" class="button big">
         </form>
     </section>
     <footer></footer>
