--- a/public/register.html
+++ b/public/register.html
@@ -20,28 +20,38 @@
         </div>
     </header>
     <section id="content" class="medium flex flex-wrap flex-justify-center flex-align-center big-gap">
-        <form method="POST" action="/register" class="flex flex-justify-center flex-align-center flex-wrap small-gap">
+        <form method="POST" action="/register" class="flex flex-justify-center flex-align-center flex-wrap medium-gap">
             <div class="input-container medium">
                 <input id ="firstName" name="firstName" type="text" placeholder=" " class="medium">
-                <label for="firstName" class="placeholder">First name</label>
+                <div class="label-container">
+                    <label for="firstName" class="placeholder">First name</label>
+                </div>
             </div>
             <div class="input-container medium">
                 <input id ="lastName" name="lastName" type="text" placeholder=" " class="medium">
-                <label for="lastName" class="placeholder">Last name</label>
+                <div class="label-container">
+                    <label for="lastName" class="placeholder">Last name</label>
+                </div>
             </div>
             <div class="input-container medium">
                 <input id ="username" name="username" type="text" placeholder=" " class="medium">
-                <label for="username" class="placeholder">Username</label>
+                <div class="label-container">
+                    <label for="username" class="placeholder">Username</label>
+                </div>
             </div>
             <div class="input-container medium">
                 <input id="password" name="password" type="password" placeholder=" " class="medium">
-                <label for="password" class="placeholder">Password</label>
+                <div class="label-container">
+                    <label for="password" class="placeholder">Password</label>
+                </div>
             </div>
             <div class="input-container medium">
                 <input id ="fpf" name="fpf" type="text" placeholder=" " class="medium">
-                <label for="fpf" class="placeholder">Favorite physics field</label>
+                <div class="label-container">
+                    <label for="fpf" class="placeholder">Favourite physics field</label>
+                </div>
             </div>
-            <a href="/register.html">Already have an account? Log in here</a>
+            <a href="/login.html">Already have an account? Log in here</a>
             <input type="Submit" value="register" class="button big">
         </form>
     </section>
