--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="static/styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <script src="https://kit.fontawesome.com/bf7cc2096e.js" crossorigin="anonymous"></script>
-    <script src="static/js/cards.js" defer></script>
+    <script src="js/cards.js" defer></script>
     <title>Dashboard</title>
   </head>
   <body>
     <header class="medium flex flex-wrap-none flex-align-center">
         <div>
-            <a href="/index.html">
-                <img src="static/images/small-logo.png">
+            <a href="/">
+                <img src="images/small-logo.png">
             </a>
         </div>
         <div>
