--- a/public/login.html
+++ b/public/login.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="static/styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Login</title>
   </head>
   <body>
     <header class="medium flex flex-wrap-none flex-align-center">
         <div>
-            <a href="/index.html">
-                <img src="static/images/small-logo.png">
+            <a href="/">
+                <img src="images/small-logo.png">
             </a>
         </div>
         <div>
