--- a/public/register.html
+++ b/public/register.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="static/styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Register</title>
   </head>
   <body>
     <header class="medium flex flex-wrap-none flex-align-center">
         <div>
-            <img src="static/images/small-logo.png">
+            <img src="images/small-logo.png">
         </div>
         <div>
             <h2>BrainySwipe</h2>
@@ -30,6 +30,12 @@
                 <input id ="lastName" name="lastName" type="text" placeholder=" " class="medium">
                 <div class="label-container">
                     <label for="lastName" class="placeholder">Last name</label>
+                </div>
+            </div>
+            <div class="input-container medium">
+                <input id ="age" name="age" type="text" placeholder=" " class="medium">
+                <div class="label-container">
+                    <label for="lastName" class="placeholder">Age</label>
                 </div>
             </div>
             <div class="input-container medium">
