--- a/public/profile.html
+++ b/public/profile.html
@@ -19,9 +19,10 @@
         </div>
         <div>
             <nav class="flex flex-wrap-none flex-justify-center flex-align-center medium-gap">
+                <button class="button medium" onclick="window.location.href = '/'">home</button>
+                <button class="button medium" onclick="window.location.href = '/chat'">chat</button>
                 <button class="button medium">help</button>
-                <button class="button medium" onclick="window.location.href = '/chat.html'">chat</button>
-                <button class="button medium" onclick="window.location.href = '/logout.html'">logout</button>
+                <button class="button medium" onclick="window.location.href = '/logout'">logout</button>
             </nav>
         </div>
     </header>
