--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
         </div>
         <div>
             <nav class="flex flex-wrap-none flex-justify-center flex-align-center medium-gap">
-                <button class="button medium" onclick="window.location.href = '/chat.html'">chat</button>
+                <button class="button medium" onclick="window.location.href = '/chat'">chat</button>
+                <button class="button medium" onclick="window.location.href = '/profile'">Profile</button>
                 <button class="button medium">help</button>
-                <button class="button medium" onclick="window.location.htef = '/profile.html'">Profile</button>
-                <button class="button medium" onclick="fetch('/logout', method='POST');">logout</button>
+                <button class="button medium" onclick="window.location.href = '/logout'">logout</button>
             </nav>
         </div>
     </header>
