chat update, profile-backend, planering

--- a/public/profile.html
+++ b/public/profile.html
@@ -27,7 +27,7 @@
         </div>
     </header>
     <section id="content" class="medium flex flex-wrap flex-justify-center flex-align-center big-gap">
-        <form method="POST" action="/register" class="flex flex-justify-center flex-align-center flex-wrap medium-gap">
+        <form method="POST" action="/update_profile" class="flex flex-justify-center flex-align-center flex-wrap medium-gap">
             <div class="input-container medium">
                 <input id ="firstName" name="firstName" type="text" placeholder=" " class="medium">
                 <div class="label-container">
@@ -38,12 +38,6 @@
                 <input id ="lastName" name="lastName" type="text" placeholder=" " class="medium">
                 <div class="label-container">
                     <label for="lastName" class="placeholder">Last name</label>
-                </div>
-            </div>
-            <div class="input-container medium">
-                <input id ="username" name="username" type="text" placeholder=" " class="medium">
-                <div class="label-container">
-                    <label for="username" class="placeholder">Username</label>
                 </div>
             </div>
             <div class="input-container medium">
