planering swipes working

--- a/public/login.html
+++ b/public/login.html
@@ -34,7 +34,7 @@
                     <label for="password" class="placeholder">Password</label>
                 </div>
             </div>
-            <a href="/register.html">Don't have an account yet? Register here now</a>
+            <a href="/register">Don't have an account yet? Register here now</a>
             <input type="Submit" value="login" class="button big">
         </form>
     </section>
