logout profile database

--- a/public/chat.html
+++ b/public/chat.html
@@ -47,7 +47,7 @@
                         <label for="message" class="placeholder">Message</label>
                     </div>
                 </div>
-                <input type="hidden" name="user" id="username">
+                <input type="hidden" name="username" id="username">
                 <input type="Submit" value="Send message" class="button medium">
             </form>
         </section>
