--- a/public/profile.html
+++ b/public/profile.html
@@ -41,6 +41,12 @@
                 </div>
             </div>
             <div class="input-container medium">
+                <input id ="age" name="age" type="text" placeholder=" " class="medium">
+                <div class="label-container">
+                    <label for="age" class="placeholder">Age</label>
+                </div>
+            </div>
+            <div class="input-container medium">
                 <input id="password" name="password" type="password" placeholder=" " class="medium">
                 <div class="label-container">
                     <label for="password" class="placeholder">Password</label>
