--- a/public/chat.html
+++ b/public/chat.html
@@ -48,7 +48,8 @@
                     </div>
                 </div>
                 <input type="hidden" name="username" id="username">
-                <input type="Submit" value="Send message" class="button medium">
+                <input type="submit" value="Send message" class="button medium">
+                <input type="submit" value="Auto pickup-line" class="button medium" onclick="autoPickUpLine()">
             </form>
         </section>
     </section>
