--- a/public/register.html
+++ b/public/register.html
@@ -56,6 +56,12 @@
                     <label for="fpf" class="placeholder">Favourite physics field</label>
                 </div>
             </div>
+            <div class="input-container medium">
+                <input type="checkbox" name="cookies" id="cookies" class="button">
+                <div class="label-container">
+                    <label for="cookies" class="placeholder">Accept Cookies</label>
+                </div>
+            </div>
             <a href="/login.html">Already have an account? Log in here</a>
             <input type="Submit" value="register" class="button big">
         </form>
